[project]
name = "K8sDocktor"
version = "0.1.0"
description = "Kubernetes cluster analysis and debugging tool"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Green Wolve" }
]
requires-python = ">=3.12"
keywords = ["kubernetes", "debugging", "devops", "cluster-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "langgraph>=0.2.0",
    "kubernetes>=30.0.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "typing-extensions>=4.0.0"
]

